# news-from-future-ai-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  session_instructions.txt
paper_draft/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
papers/: README.md  arxiv_search_results.json  selected_papers.json
papers/pages/: 2310.05046_FakeGPT_Fake_News_Generation_Explanation_and_Det_manifest.txt  2402.07862_AI-Augmented_Predictions_LLM_Assistants_Improve_H_manifest.txt  2408.06578_OpenEP_Open-Ended_Future_Event_Prediction_manifest.txt  2409.19839_ForecastBench_A_Dynamic_Benchmark_of_AI_Forecasti_manifest.txt
results/: all_articles.json  evaluation_analysis.json  evaluation_results.json  events.json  experiment_summary.json
src/: __init__.py  create_visualizations.py  evaluation.py  news_generator.py  prediction_markets.py  run_experiment.py
