[project]
name = "news-from-future"
version = "0.1.0"
description = "Research workspace for News from the Future experiments"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "anthropic",
    "httpx",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
